--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -55,8 +55,7 @@
                 <p class="mt-2 text-gray-500">We couldn’t find anything with that term. Please try again.</p>
             </div>
         </div>
-        <div
-            class="mt-48 -z-20 px-4 mx-auto max-w-screen-lg grid grid-cols-1  items-stretch gap-6 sm:grid-cols-2 lg:grid-cols-5">
+        <div class="mt-48 -z-20 px-4 mx-auto max-w-screen-lg grid grid-cols-2  items-stretch gap-6  lg:grid-cols-5">
             @for (item of todayShows; track item) {
             <app-movie-card [item]="item"></app-movie-card>
 
